<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newitem"
        android:orderInCategory="100"
        android:title="@string/newitem"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit_myprofile"
        android:orderInCategory="100"
        android:title="@string/me"
        app:showAsAction="never" />

    <item
        android:id="@+id/changeparticular"
        android:orderInCategory="100"
        android:title="@string/changeparticular"
        app:showAsAction="never" />
    <item
        android:id="@+id/reports"
        android:orderInCategory="100"
        android:title="@string/reports"
        app:showAsAction="never" />

</menu>