<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserUpdate">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5856609108170870/8075291440"
        app:layout_constraintBottom_toTopOf="@+id/scrol1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:id="@+id/scrol1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbarSize="15dp"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingBottom="5dp"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/eTUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="?android:attr/colorForeground"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/company"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/eTCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/companyname"
                android:inputType="text"
                android:textColor="?android:attr/colorForeground"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/maild"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/eTMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Mailid"
                android:inputType="textEmailAddress"
                android:textColor="?android:attr/colorForeground" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/mobno"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/eTMobNo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/mobno"
                    android:inputType="phone"
                    android:textColor="?android:attr/colorForeground"
                    tools:layout_editor_absoluteX="95dp"
                    tools:layout_editor_absoluteY="16dp" />

                <Button
                    android:id="@+id/btnGetOtp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/get_otp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/otp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <EditText
                    android:id="@+id/eTOtp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:hint="@string/enter_otp"
                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:id="@+id/btnReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>