<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5856609108170870/5664858328"
        app:layout_constraintBottom_toTopOf="@+id/scrol1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:id="@+id/scrol1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:scrollbarSize="15dp"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#04081E"
            android:layout_marginTop="30dp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingBottom="5dp"
                android:text="@string/mobno"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/eTmob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/enter_mobilenumber"
                android:inputType="number"
                android:textColor="?android:attr/colorForeground"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="16dp" />

            <Button
                android:id="@+id/btnotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:text="@string/get_otp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible"
                android:id="@+id/linearlayout"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/otp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <EditText
                    android:id="@+id/eTotp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/enter_otp"
                    android:inputType="number"
                    android:textColor="?android:attr/colorForeground"
                    tools:layout_editor_absoluteX="95dp"
                    tools:layout_editor_absoluteY="16dp" />

                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>